--- a/app/src/main/res/layout/video_item_layout.xml
+++ b/app/src/main/res/layout/video_item_layout.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/cardBackground"
     android:elevation="8dp"
     android:foreground="?attr/selectableItemBackgroundBorderless"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
-    android:translationZ="4dp"
-   >
+    android:translationZ="4dp">
 
     <RelativeLayout
         android:layout_height="wrap_content"
@@ -43,31 +42,27 @@
                 style="@style/TextViewVideoInfoStyle"
                 android:id="@+id/txtVideoDuration"
                 android:text="Duration" />
-
-            <TextView
-
-                style="@style/TextViewVideoInfoStyle"
-                android:id="@+id/txtVideoResolution"
-                android:text="Resolution" />
-
             <TextView
                 style="@style/TextViewVideoInfoStyle"
                 android:id="@+id/txtVideoSize"
                 android:text="Video Szie"
                 ></TextView>
+            <TextView
+                style="@style/TextViewVideoInfoStyle"
+                android:id="@+id/txtVideoResolution"
+                android:text="Resolution" />
         </LinearLayout>
 
         <ImageButton
            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackgroundBorderless"
             android:id="@+id/btnPopupMenu"
             android:layout_alignParentBottom="true"
             android:layout_alignParentEnd="true"
             android:layout_marginBottom="8dp"
             android:layout_marginEnd="20dp"
             android:padding="4dp"
-            android:src="@drawable/ic_more_vert_black_24dp"
-            android:tint="@color/colorPrimary" />
+            app:srcCompat="@drawable/ic_more"
+          />
     </RelativeLayout>
 </FrameLayout>
